<resources>
    <string name="app_name">Hamro Chat</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="pw">Password</string>
    <string name="confirmPw">Confirm Password</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="signInBtn">Sign In</string>
    <string name="registerBtn">Register</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="appID">PUT YOUR UNIQUE APP ID HERE FOR ADMOB</string>
    <string name="bannerAdUnitID">PUT YOUR BANNER AD UNIT ID HERE FOR ADMOB</string>
    <string name="interstitialAdUnitID">PUT YOUR INTERSTITIAL AD UNIT ID HERE FOR ADMOB</string>
    


</resources>
