<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/road"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.examplecompany.hamrochat.RegisterActivity">


    <AutoCompleteTextView
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold" />


    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPw"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/register_sign_up_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="signUp"
        android:text="@string/action_sign_up"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="306dp"
        android:layout_height="32dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="1dp"
        app:adSize="BANNER"
        app:adUnitId="@string/bannerAdUnitID">

    </com.google.android.gms.ads.AdView>


</LinearLayout>
