<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.examplecompany.hamrochat.activity_login">


    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textIsSelectable="false" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />


    <Button
        android:id="@+id/login_sign_in_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/green"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_register_button"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="registerNewUser"
        android:text="@string/action_register"
        android:textColor="@color/green"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="1dp"
        app:adSize="BANNER"
        app:adUnitId="PUT YOUR BANNER AD UNIT ID HERE">

    </com.google.android.gms.ads.AdView>

</LinearLayout>
